Add store order model
